{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 2465,
  "lineage": "d617caf9-0041-16d0-8f8b-f94e7a693473",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-bastion-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7dbe84185145ec3",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:elastic-ip/eipalloc-0a7dbe84185145ec3",
            "association_id": "eipassoc-095ba46b2785f8734",
            "domain": "vpc",
            "id": "eipalloc-0a7dbe84185145ec3",
            "instance": "i-026c0905ebb983845",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d4b014f6015e176c",
            "private_dns": "ip-10-250-2-61.ap-northeast-2.compute.internal",
            "private_ip": "10.250.2.61",
            "public_dns": "ec2-43-202-17-129.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.17.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-PRD-NGW-2A-EIP"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2A-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002d11be416447a49",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:elastic-ip/eipalloc-002d11be416447a49",
            "domain": "vpc",
            "id": "eipalloc-002d11be416447a49",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-214-87.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.214.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-PRD-NGW-2C-EIP"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2C-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dc41154732888f4",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:elastic-ip/eipalloc-06dc41154732888f4",
            "association_id": "eipassoc-03e23786189391f5b",
            "domain": "vpc",
            "id": "eipalloc-06dc41154732888f4",
            "instance": "i-0b731ee7acba3b49f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d21b2b48d838499b",
            "private_dns": "ip-10-230-2-27.ap-northeast-2.compute.internal",
            "private_ip": "10.230.2.27",
            "public_dns": "ec2-3-37-40-212.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.40.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-DEV-NGW-2A-EIP"
            },
            "tags_all": {
              "Name": "SEO-DEV-NGW-2A-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.dev-bastion",
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf674ecd174dedcf",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:elastic-ip/eipalloc-0bf674ecd174dedcf",
            "domain": "vpc",
            "id": "eipalloc-0bf674ecd174dedcf",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-193-236.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.193.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-DEV-NGW-2C-EIP"
            },
            "tags_all": {
              "Name": "SEO-DEV-NGW-2C-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022ae9e4796cbb6e2",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-026c0905ebb983845",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026c0905ebb983845",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4b014f6015e176c",
            "private_dns": "ip-10-250-2-61.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.61",
            "public_dns": "ec2-15-164-229-63.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.229.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0410bf1d7c6a6fc5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b94bf40af64af4c",
            "tags": {
              "Name": "SEO-PRD-K8S-BASTION-SERVER"
            },
            "tags_all": {
              "Name": "SEO-PRD-K8S-BASTION-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070c1be6fb1928592"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022ae9e4796cbb6e2",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-0b731ee7acba3b49f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b731ee7acba3b49f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d21b2b48d838499b",
            "private_dns": "ip-10-230-2-27.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.2.27",
            "public_dns": "ec2-52-78-98-227.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.98.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059c9f93778f0e015",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdd3de76c399c94d",
            "tags": {
              "Name": "SEO-DEV-K8S-BASTION-SERVER"
            },
            "tags_all": {
              "Name": "SEO-DEV-K8S-BASTION-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f43e31e16753aa2"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-argocd-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-0ab52cf37073133fb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab52cf37073133fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee7723019d41544f",
            "private_dns": "ip-10-250-50-75.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.50.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf1f287f586b390d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095f5de3efc7db26c",
            "tags": {
              "Name": "SEO-PRD-K8S-ARGOCD-SERVER"
            },
            "tags_all": {
              "Name": "SEO-PRD-K8S-ARGOCD-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056ff7cc054c13983"
            ]
          },
          "dependencies": [
            "aws_security_group.efs_security",
            "aws_subnet.pri_sub_a",
            "aws_vpc.seo-vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dev-argocd-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-0e18d37a778f41f6f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e18d37a778f41f6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038d279644deacbe8",
            "private_dns": "ip-10-230-50-171.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.50.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd8c0cac21713225",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0235394750416da4e",
            "tags": {
              "Name": "SEO-DEV-K8S-ARGOCD-SERVER"
            },
            "tags_all": {
              "Name": "SEO-DEV-K8S-ARGOCD-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08186dd89e9759638"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_efs_security",
            "aws_subnet.dev_pri_sub_a",
            "aws_vpc.dev_vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dev-efs-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-0224a0bd37a8cf947",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0224a0bd37a8cf947",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07272dadc2ee06ef3",
            "private_dns": "ip-10-230-51-221.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.51.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065d85566356404e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009ac0888ed55a3cc",
            "tags": {
              "Name": "SEO-DEV-K8S-EFS-SERVER"
            },
            "tags_all": {
              "Name": "SEO-DEV-K8S-EFS-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08186dd89e9759638"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_efs_security",
            "aws_subnet.dev_pri_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-dev-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022ae9e4796cbb6e2",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-0ea19702357a9ce8b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea19702357a9ce8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0551d4656e08574e9",
            "private_dns": "ip-10-230-50-238.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.50.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e0eebfd8bfba872",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0235394750416da4e",
            "tags": {
              "Name": "SEO-DEV-K8S-MANAGED-SERVER"
            },
            "tags_all": {
              "Name": "SEO-DEV-K8S-MANAGED-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d788c5a4b864bb3"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_private_security",
            "aws_subnet.dev_pri_sub_a",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-efs-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-0e52fb28f6bd3f30c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e52fb28f6bd3f30c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06aa5d1051d504b58",
            "private_dns": "ip-10-250-51-17.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.51.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8a1872c08bb79f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a053883a21250a3",
            "tags": {
              "Name": "SEO-PRD-K8S-EFS-SERVER"
            },
            "tags_all": {
              "Name": "SEO-PRD-K8S-EFS-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056ff7cc054c13983"
            ]
          },
          "dependencies": [
            "aws_security_group.efs_security",
            "aws_subnet.pri_sub_c",
            "aws_vpc.seo-vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022ae9e4796cbb6e2",
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:instance/i-086aad4aa7aed349c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086aad4aa7aed349c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c4098b5b421dacc",
            "private_dns": "ip-10-250-50-23.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.50.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0519e8c94dafa9ff7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095f5de3efc7db26c",
            "tags": {
              "Name": "SEO-PRD-K8S-MANAGED-SERVER"
            },
            "tags_all": {
              "Name": "SEO-PRD-K8S-MANAGED-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc90d94710490920"
            ]
          },
          "dependencies": [
            "aws_security_group.private_security",
            "aws_subnet.pri_sub_a",
            "aws_vpc.seo-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:internet-gateway/igw-012934337cadad1c4",
            "id": "igw-012934337cadad1c4",
            "owner_id": "637423521175",
            "tags": {
              "Name": "SEO-DEV-IGW"
            },
            "tags_all": {
              "Name": "SEO-DEV-IGW"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:internet-gateway/igw-01e682dfc5fecc353",
            "id": "igw-01e682dfc5fecc353",
            "owner_id": "637423521175",
            "tags": {
              "Name": "SEO-PRD-IGW"
            },
            "tags_all": {
              "Name": "SEO-PRD-IGW"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "awesome-dev-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf674ecd174dedcf",
            "association_id": "eipassoc-0296e5423411deb75",
            "connectivity_type": "public",
            "id": "nat-0ae8821e60b3bbcc7",
            "network_interface_id": "eni-0dcf499b7f1437dcf",
            "private_ip": "10.230.2.6",
            "public_ip": "13.209.193.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bdd3de76c399c94d",
            "tags": {
              "Name": "SEO-DEV-NGW-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-NGW-2A"
            }
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "awesome-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002d11be416447a49",
            "association_id": "eipassoc-055c537c04b65cfe6",
            "connectivity_type": "public",
            "id": "nat-045355c8085e4c5b3",
            "network_interface_id": "eni-093eaa912a6ec40ca",
            "private_ip": "10.250.2.205",
            "public_ip": "3.39.214.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02b94bf40af64af4c",
            "tags": {
              "Name": "SEO-PRD-NGW-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2A"
            }
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_to_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.250.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0166d44eb1a8ed9c53085032262",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0166d44eb1a8ed9c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02486ab85e8a66b93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.seo-vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod_to_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.230.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004021f87753c7fb93304825548",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004021f87753c7fb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02486ab85e8a66b93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.seo-vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:route-table/rtb-0bd3c6b8ad9811689",
            "id": "rtb-0bd3c6b8ad9811689",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ae8821e60b3bbcc7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-DEV-RT-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-RT-PRI-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:route-table/rtb-05983a29dd4ab29a1",
            "id": "rtb-05983a29dd4ab29a1",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ae8821e60b3bbcc7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-DEV-RT-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-RT-PRI-2C"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:route-table/rtb-0242cdc338c182b1a",
            "id": "rtb-0242cdc338c182b1a",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012934337cadad1c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-DEV-RT-PUB"
            },
            "tags_all": {
              "Name": "SEO-DEV-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:route-table/rtb-0091a135e748194d1",
            "id": "rtb-0091a135e748194d1",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-045355c8085e4c5b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PRI-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:route-table/rtb-0c4b5fdb7c66ff71a",
            "id": "rtb-0c4b5fdb7c66ff71a",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-045355c8085e4c5b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PRI-2C"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:route-table/rtb-08b1343ef94cb6193",
            "id": "rtb-08b1343ef94cb6193",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e682dfc5fecc353",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PUB"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c00cdfa4305db49",
            "route_table_id": "rtb-0091a135e748194d1",
            "subnet_id": "subnet-0d9182d4a02e593a8"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.db_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f8a7759d63f099a",
            "route_table_id": "rtb-0c4b5fdb7c66ff71a",
            "subnet_id": "subnet-0e8f9218286296ea0"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.db_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdf0f6fa57d993ff",
            "route_table_id": "rtb-0bd3c6b8ad9811689",
            "subnet_id": "subnet-02204cfd93337898b"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_db_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef029d7678460cb1",
            "route_table_id": "rtb-05983a29dd4ab29a1",
            "subnet_id": "subnet-0682422db1eba571b"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_db_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b90eb64d3c3eec0",
            "route_table_id": "rtb-0bd3c6b8ad9811689",
            "subnet_id": "subnet-00cea5a9be3a01d8b"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_mgnt_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce6d8d50bd54f2d3",
            "route_table_id": "rtb-05983a29dd4ab29a1",
            "subnet_id": "subnet-00d69c9476b5e987a"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_mgnt_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d0f85ef943a053",
            "route_table_id": "rtb-0bd3c6b8ad9811689",
            "subnet_id": "subnet-07e06cbada3ec317d"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_node_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010137545b6311a16",
            "route_table_id": "rtb-05983a29dd4ab29a1",
            "subnet_id": "subnet-071f735e9c817e247"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_node_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085af5ff651869475",
            "route_table_id": "rtb-0bd3c6b8ad9811689",
            "subnet_id": "subnet-0235394750416da4e"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_pri_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9e8bdb14dfe4604",
            "route_table_id": "rtb-0bd3c6b8ad9811689",
            "subnet_id": "subnet-009ac0888ed55a3cc"
          },
          "dependencies": [
            "aws_eip.dev-nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.awesome-dev-nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_pri_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba6840db74e8139",
            "route_table_id": "rtb-0242cdc338c182b1a",
            "subnet_id": "subnet-084d5b5ab79974c01"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d93e1784d3b1a50d",
            "route_table_id": "rtb-0242cdc338c182b1a",
            "subnet_id": "subnet-0bdd3de76c399c94d"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e044f4ba67a5e290",
            "route_table_id": "rtb-0091a135e748194d1",
            "subnet_id": "subnet-0c174c405e146560d"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.mgnt_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f46c8012ad033a",
            "route_table_id": "rtb-0c4b5fdb7c66ff71a",
            "subnet_id": "subnet-0bbef66f331ef90db"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.mgnt_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a3f57092baf9649",
            "route_table_id": "rtb-0091a135e748194d1",
            "subnet_id": "subnet-07c4c11eeaa0858c1"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.node_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffe8dd4127250651",
            "route_table_id": "rtb-0c4b5fdb7c66ff71a",
            "subnet_id": "subnet-0e4e59b3421fdc2d7"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.node_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e6a93cacf26501a",
            "route_table_id": "rtb-0091a135e748194d1",
            "subnet_id": "subnet-095f5de3efc7db26c"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.pri_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aa1b61344e4bd95",
            "route_table_id": "rtb-0c4b5fdb7c66ff71a",
            "subnet_id": "subnet-00a053883a21250a3"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.pri_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0344c62f87b7af704",
            "route_table_id": "rtb-08b1343ef94cb6193",
            "subnet_id": "subnet-063d9ed21a1fd5732"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_a",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056f7f6fa38e25fbe",
            "route_table_id": "rtb-08b1343ef94cb6193",
            "subnet_id": "subnet-02b94bf40af64af4c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_c",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-070c1be6fb1928592",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070c1be6fb1928592",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SEO-PRD-VPC-BASTION-PUB-SG-2A",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-SG-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-SG-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-0266c8d6596bc355b",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0266c8d6596bc355b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-PRD-PRI-DB-SG2024093002375217040000000a",
            "name_prefix": "SEO-PRD-PRI-DB-SG",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-04f43e31e16753aa2",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f43e31e16753aa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SEO-DEV-VPC-BASTION-PUB-SG-2A",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-SG-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-SG-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-007f0c9d9c4aa3e03",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f0c9d9c4aa3e03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-DEV-PRI-DB-SG20240930023750366800000008",
            "name_prefix": "SEO-DEV-PRI-DB-SG",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_dms_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-066ade2300da60e6d",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066ade2300da60e6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-DEV-PRI-DMS-SG20240930023750419100000009",
            "name_prefix": "SEO-DEV-PRI-DMS-SG",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-08186dd89e9759638",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08186dd89e9759638",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "SEO-DEV-EFS-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-EFS-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-01523efe336f1149b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01523efe336f1149b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "DEV_EFS_SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-0ea393a2a6ef259ae",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea393a2a6ef259ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkinsDEV",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesomeDEV-jenkins-sg"
            },
            "tags_all": {
              "Name": "awesomeDEV-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-04d788c5a4b864bb3",
            "description": "Allow HTTP,HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d788c5a4b864bb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SEO-DEV-VPC-PRI-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-VPC-PRI-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PRI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_redis_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-0150fac563c48b510",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0150fac563c48b510",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "SEO-DEV-REDIS-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-DEV-REDIS-SG"
            },
            "tags_all": {
              "Name": "SEO-DEV-REDIS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-0187937541ba228b8",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0187937541ba228b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SEO-PRD-PRI-DMS-SG2024093002375404460000000b",
            "name_prefix": "SEO-PRD-PRI-DMS-SG",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-056ff7cc054c13983",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056ff7cc054c13983",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "SEO-PRD-EFS-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-EFS-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-063a0930165fb31f0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063a0930165fb31f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS_SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-004741524e62c5b8a",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004741524e62c5b8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-jenkins-sg"
            },
            "tags_all": {
              "Name": "awesome-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-0bc90d94710490920",
            "description": "Allow HTTP,HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc90d94710490920",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SEO-PRD-VPC-PRI-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:security-group/sg-0668c9e21bb57ef8e",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0668c9e21bb57ef8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "SEO-PRD-REDIS-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEO-PRD-REDIS-SG"
            },
            "tags_all": {
              "Name": "SEO-PRD-REDIS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0d9182d4a02e593a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9182d4a02e593a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DB-SUB-2A"
            },
            "tags_all": {
              "Name": "SEO-DB-SUB-2A"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0e8f9218286296ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f9218286296ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DB-SUB-2C"
            },
            "tags_all": {
              "Name": "SEO-DB-SUB-2C"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-02204cfd93337898b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02204cfd93337898b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-DB-SUB-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-DB-SUB-2A"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0682422db1eba571b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0682422db1eba571b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-DB-SUB-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-DB-SUB-2C"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-00cea5a9be3a01d8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cea5a9be3a01d8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-MGNT-SUB-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-MGNT-SUB-2A"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-00d69c9476b5e987a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d69c9476b5e987a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-MGNT-SUB-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-MGNT-SUB-2C"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-07e06cbada3ec317d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e06cbada3ec317d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-NODE-SUB-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-NODE-SUB-2A"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-071f735e9c817e247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071f735e9c817e247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-NODE-SUB-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-NODE-SUB-2C"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pri_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0cb79b5b696eb31ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb79b5b696eb31ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-EFS"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-EFS"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pri_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0235394750416da4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0235394750416da4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PRI-2A"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pri_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-009ac0888ed55a3cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009ac0888ed55a3cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PRI-2C"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-084d5b5ab79974c01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084d5b5ab79974c01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-2A"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-BASTION-PUB-2A"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0bdd3de76c399c94d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdd3de76c399c94d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-DEV-VPC-PUB-2C"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC-PUB-2C"
            },
            "vpc_id": "vpc-07c800f5e70bb5002"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0c174c405e146560d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c174c405e146560d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-MGNT-SUB-2A"
            },
            "tags_all": {
              "Name": "SEO-MGNT-SUB-2A"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0bbef66f331ef90db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbef66f331ef90db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-MGNT-SUB-2C"
            },
            "tags_all": {
              "Name": "SEO-MGNT-SUB-2C"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-07c4c11eeaa0858c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c4c11eeaa0858c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-NODE-SUB-2A"
            },
            "tags_all": {
              "Name": "SEO-NODE-SUB-2A"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0e4e59b3421fdc2d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4e59b3421fdc2d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-NODE-SUB-2C"
            },
            "tags_all": {
              "Name": "SEO-NODE-SUB-2C"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-08382c725f86c3b47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08382c725f86c3b47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-EFS"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-EFS"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-095f5de3efc7db26c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095f5de3efc7db26c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-00a053883a21250a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a053883a21250a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-2C"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-063d9ed21a1fd5732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d9ed21a1fd5732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-2A"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-02b94bf40af64af4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b94bf40af64af4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PUB-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PUB-2C"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn-pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:subnet/subnet-0b1a9354a88083a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1a9354a88083a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-VPN-PUB"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-VPN-PUB"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:vpc/vpc-07c800f5e70bb5002",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-00fd1e63964929f6b",
            "default_route_table_id": "rtb-0166d44eb1a8ed9c5",
            "default_security_group_id": "sg-0894e878b808dfa2b",
            "dhcp_options_id": "dopt-0ed41b4aef83dc1aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c800f5e70bb5002",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0166d44eb1a8ed9c5",
            "owner_id": "637423521175",
            "tags": {
              "Name": "SEO-DEV-VPC"
            },
            "tags_all": {
              "Name": "SEO-DEV-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "seo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423521175:vpc/vpc-00f111b4f1570014e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-0ca959f2d5ea6b4e3",
            "default_route_table_id": "rtb-004021f87753c7fb9",
            "default_security_group_id": "sg-093646b09a6175e69",
            "dhcp_options_id": "dopt-0ed41b4aef83dc1aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f111b4f1570014e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004021f87753c7fb9",
            "owner_id": "637423521175",
            "tags": {
              "Name": "SEO-PRD-VPC"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-02486ab85e8a66b93",
            "peer_owner_id": "637423521175",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-07c800f5e70bb5002",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-PEERING"
            },
            "tags_all": {
              "Name": "VPC-PEERING"
            },
            "vpc_id": "vpc-00f111b4f1570014e"
          },
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.seo-vpc"
          ]
        }
      ]
    }
  ]
}